[package]
name = "blake2b-pow"
version = "0.1.0"
authors = ["0xSilene"]
edition = "2018"
description = "A Library for Performing Proof of Work Using Blake2B Based Off of Nano's Consensus Algorithm"
keywords = ["PoW", "Blockchain","Proof-of-Work","Nano","Blake2b"]
categories = ["algorithms","cryptography","cryptography::cryptocurrencies","no-std"]
license = "MIT OR APACHE-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2-rfc = "0.2.18"